[tool.poetry]
name = "town-clock"
version = "1.0.2"
description = "An application that runs a raspberry pi based town clock."
authors = ["Zack Hankin <zthankin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "town_clock" }]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
icecream = "^2.1.3"
skyfield = "^1.45"
pytz = "^2022.7.1"
timezonefinder = "^6.1.9"
loguru = "^0.6.0"
types-pytz = "^2022.7.1.0"
types-cffi = "^1.15.1.5"
pendulum = "^2.1.2"
pytest = "^7.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
