[tool.poetry]
name = "town-clock"
version = "1.1.1"
description = "An application that runs a raspberry pi based town clock."
authors = ["Zack Hankin <zthankin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "town_clock" }]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
icecream = "^2.1.3"
skyfield = "^1.45"
pytz = "^2022.7.1"
timezonefinder = "^6.1.9"
loguru = "^0.6.0"
pendulum = "^2.1.2"

# Extras for docs
sphinx = { version = "^5", optional = true }
myst-parser = { version = "^0.18.1", optional = true }
sphinx-rtd-theme = { version = "^1", optional = true }
inflect = "^7.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
mypy = "^1.0.0"
types-pytz = "^2022.7.1.0"
types-cffi = "^1.15.1.5"
flake8 = "^6.0.0"
tox = "^4.4.5"
isort = "^5.13.2"

[tool.poetry.extras]
docs = ['sphinx', 'myst-parser', 'sphinx-rtd-theme']

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/town_clock'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
